# PaperRAG

./: .coverage  .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  test.yml
.mimocode/plans/: 1781591954895-shiny-knight.md
alembic/: env.py
alembic/versions/: 21f6caf0b15b_init.py  add_paper_knowledge_graph.py  add_workspaces.py
backend/: app.py
backend/agent/: core.py  prompts.py  schemas.py  verify.py
backend/api/: __init__.py  auth.py  cache.py  chat.py  documents.py  health.py  routes.py  sessions.py  stats.py  ws.py
backend/core/: __init__.py  auth.py  budget.py  config.py  database.py  dependencies.py  exceptions.py  llm.py  logging_config.py  metrics.py  models.py  rate_limit.py  stats.py
backend/rag/: __init__.py  academic_cleaner.py  citation_extractor.py  document_loader.py  embedding.py  formula_index.py  formula_normalizer.py  glossary_extractor.py  layout_analyzer.py  multimodal.py  parent_chunk_store.py  rag_pipeline.py  rag_utils.py  theorem_detector.py
backend/schemas/: __init__.py  schemas.py
backend/services/: __init__.py  agent.py  cache.py  conversation_storage.py  tools.py  upload_jobs.py
backend/vectordb/: __init__.py  milvus_client.py  milvus_writer.py
docs/: architecture-review-and-improvement-plan.md  code-review-action-items.md  improvement_plan.md  plan-1-architecture.md  plan-2-frontend.md  plan-3-ops.md  plan-4-testing.md  plan-5-academic.md
docs/archive/: completed-items.md  plan-1-architecture.md  plan-2-frontend.md  plan-3-ops.md  plan-4-testing.md
frontend/: index.html  package-lock.json  package.json  script.js  style.css  tsconfig.json
frontend/src/: App.vue  env.d.ts  main.ts
models/: CACHEDIR.TAG
nginx/: nginx.conf
scripts/: evaluate_rag.py
tests/: conftest.py  test_agent.py  test_cache.py  test_embedding.py  test_health.py  test_rag_pipeline.py  test_rate_limit.py  test_stats.py  test_verify.py
tests/unit/: test_agent.py  (+20 more)
(+52 files in other folders)
